<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Urdaneta Food Map</string>
    <string name="action_settings">Settings</string>
    <string name="food">FOODANETA</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signin">Sign Up</string>
    <string name="title_activity_second">Profile</string>
    <string name="logout">Log Out</string>
    <string name="cam">Camera</string>
    <string name="file">Files</string>
    <string name="map">Map</string>
    <string name="star">Star</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_third">Camera</string>
    <string name="title_activity_map">Map</string>
    <string name="photo">Browse Photo</string>
    <string name="camera">Take Camera</string>
    <string name="viewmap">View Map</string>
    <string name="fav">Favorites</string>
    <string name="title_activity_submit_photo">Submit Photo</string>
    <string name="title">TITLE</string>
    <string name="des">DESCRIPTION</string>
    <string name="cancel">CANCEL</string>
    <string name="report">SUBMIT REPORT</string>

</resources>