<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
    android:background="@drawable/food_blur"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucuccs.urdanetafoodmap.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textStyle="bold"
		android:textSize="40sp" />

    <LinearLayout
        android:layout_width="277dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="#80FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <EditText
            android:id="@+id/username"
            android:textColor="#FFF"
        	android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

    <EditText
        android:id="@+id/password"
            android:textColor="#FFF"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    </LinearLayout>

    

    <Button
        android:id="@+id/login"
        style="@style/btnStyleShakespeare"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/signin"
        style="@style/btnStyleShakespeare"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/signin" />

</LinearLayout>